--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <div id="lives">Lives: 3</div>
     <div id="gameOverScreen" class="screen">
         <div>Game Over!</div>
+        <div id="finalScore">Final Score: 0</div>
+        <button id="restartButton">Restart</button>
     </div>
     
     <script src="js/game.js"></script>
 </body>
 </html>
-
