--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <canvas id="gameCanvas"></canvas>
     <div id="score">Score: 0</div>
     <div id="lives">Lives: 3</div>
-    <div id="gameOverScreen" class="screen">
+    <div id="endScreen" class="screen">
         <div>Game Over!</div>
         <div id="finalScore">Final Score: 0</div>
         <button id="restartButton">Restart</button>
